# McEliece

./: .gitignore  Cargo.toml  README.md  TAGS
doc/: a_summary_of_mceliece_type_cryptosystems.ps
src/: TAGS  crypto.rs  finite_field.rs  finite_field_1024.rs  finite_field_2.rs  finite_field_7.rs  finite_field_8.rs  goppa.rs  lib.rs  main.rs  matrix.rs  matrix2.rs  matrix_tmp.rs  polynomial.rs  rowvec.rs
src/crypto/: io.rs  mod.rs
src/finite_field/: f2.rs  f2m.rs  f7.rs  ff2.rs  ff2m.rs  ff7.rs  finite_field_1024.rs  finite_field_2.rs  finite_field_256.rs  finite_field_7.rs  finite_field_8.rs  mod.rs
src/goppa/: byte_vector.rs  mod.rs
src/matrix/: f2.rs  gauss.rs  io.rs  mod.rs  perm.rs  rowvec.rs  submat.rs  traits.rs
src/matrix/colvec/: mod.rs  traits.rs
src/matrix/rowvec/: io.rs  mod.rs  traits.rs
src/polynomial/: byte_vector.rs  characteristic_two.rs  io.rs  mod.rs  traits.rs
tests/: TODO.md  common.rs  crypto.rs  goppa.rs  matrix_f1024.rs  matrix_f2.rs  matrix_f7.rs  polynomial.rs  submat.rs
tests/common/: mod.rs
tests/tmp/: matrix_f7.rs  polynomial.rs
